MDEV-8599 "WHERE varchar_field LIKE temporal_const" does not use range optimizer